[CLOUDTRUST-6373] Get user credentials by priority (#84)